--- a/app/src/main/res/layout/activity_second2.xml
+++ b/app/src/main/res/layout/activity_second2.xml
@@ -2,15 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical"
     android:orientation="vertical"
-    android:padding="16dp"
-    tools:context=".MainActivity">
+    tools:context=".intent.FirstActivity">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_go_to_intent"
+    <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/intent_label" />
+        android:gravity="center"
+        android:text="@string/second_activity_label"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
