--- a/app/src/main/res/layout/activity_second2.xml
+++ b/app/src/main/res/layout/activity_second2.xml
@@ -8,11 +8,32 @@
     tools:context=".intent.FirstActivity">
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:gravity="center"
+        android:text="@string/second_activity_label"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_subtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/second_activity_label"
-        android:textSize="20sp"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:text="@string/second_activity_label"
+        android:textSize="14sp"
         android:textStyle="bold" />
 
 </LinearLayout>
