--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -22,4 +22,10 @@
         android:layout_height="wrap_content"
         android:text="@string/go_to_second_label" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_go_share"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/share_some_text_label" />
+
 </LinearLayout>
