--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,10 @@
         android:layout_height="wrap_content"
         android:text="@string/intent_label" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_go_to_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/fragment_label" />
+
 </LinearLayout>
