--- a/app/src/main/res/layout/fragment_list_message.xml
+++ b/app/src/main/res/layout/fragment_list_message.xml
@@ -7,6 +7,8 @@
     <LinearLayout
         android:id="@+id/container_list_message"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
+        android:background="@color/cardview_dark_background"
         android:orientation="vertical" />
+
 </ScrollView>
