Fragment in XML

--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:id="@+id/fragment_container_view"
     android:orientation="horizontal"
     android:layout_height="match_parent"
-    tools:context=".fragment.FragmentActivity" />
+    tools:context=".fragment.FragmentActivity"
+    android:name="com.furqan.androidfundamental.fragment.fragment.ListMessageFragment"/>
