--- a/app/src/main/res/layout/fragment_detail_message.xml
+++ b/app/src/main/res/layout/fragment_detail_message.xml
@@ -2,10 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_detail_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="This is Detail Message"
