--- a/app/src/main/res/layout/fragment_detail_message.xml
+++ b/app/src/main/res/layout/fragment_detail_message.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_detail_message"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="This is Detail Message"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" />
+        android:textSize="18sp"
+        tools:text="This is Detail Message" />
 
 </LinearLayout>
