--- a/app/src/main/res/layout/fragment_list_message.xml
+++ b/app/src/main/res/layout/fragment_list_message.xml
@@ -1,14 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rv_list_message"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <LinearLayout
-        android:id="@+id/container_list_message"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@color/cardview_dark_background"
-        android:orientation="vertical" />
-
-</ScrollView>
+    android:layout_height="match_parent" />
