--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,4 +19,10 @@
         android:layout_height="wrap_content"
         android:text="@string/fragment_label" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_go_to_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/navigation_label" />
+
 </LinearLayout>
